components/optional/mailhog/mailhog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: mailhog
    app.kubernetes.io/component: mailhog
    app.kubernetes.io/instance: mailhog
  name: mailhog
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: mailhog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: mailhog
    spec:
      containers:
      - image: mailhog/mailhog
        imagePullPolicy: IfNotPresent
        name: mailhog
        ports:
        - containerPort: 8025
          protocol: TCP
        - containerPort: 1025
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
