components/optional/mailhog/mailhog-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mailhog
    app.kubernetes.io/component: mailhog
    app.kubernetes.io/instance: mailhog
  name: mailhog
spec:
  port:
    targetPort: 8025-tcp
  to:
    kind: Service
    name: mailhog
    weight: 100
  wildcardPolicy: None
